Problem: Throwing error while logging in

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,7 +1,7 @@
 <div class="header"></div>
 <div class="containerSignup">
     <div class="signup-form">
-        <form class="form-signin" method="POST" action="/signup">
+        <form class="form-signin" method="POST" action="/users/signup">
               <div class="form-group">                  
                     <input name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter Full Name" required >
                  </div>                
