--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,7 +1,20 @@
  <div class="header"></div>
+ {{#if msg}}
+    <div id="alert-msg" class="alert alert-success text-center collapse">
+       <a href="#" id="close-alert" class="close" data-dismiss="alert">&times;</a>
+       <strong>{{msg}}</strong>
+    </div>
+ {{/if}} 
+
+ {{#if error}}
+    <div id="alert-msg" class="alert alert-danger text-center collapse">
+       <a href="#" id="close-alert" class="close" data-dismiss="alert">&times;</a>
+       <strong>{{error}}</strong>
+    </div>
+ {{/if}} 
  <div class="containerSignin">
     <div class="form-popup" id="myForm">
-        <form action="/form-login" method="POST">
+        <form action="/users/signin" method="POST">
             
             <div class="form-group">
                 <input name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
@@ -26,5 +39,9 @@
         document.querySelector('button').addEventListener('click', function(){
             console.log("Login button clicked");
         })
-    
+    $(document).ready(function(){
+       $('#close-alert').click(function(){
+           $('#alert-msg').hide('fade');
+       })
+    })
     </script>
