--- a/views/groupexpense.hbs
+++ b/views/groupexpense.hbs
@@ -16,7 +16,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Marketing</h5>
          <p class="card-text">Amount this month : {{mktamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month" class="btn" style="background-color:#FB7C28;" id="vmm" name="marketing">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
@@ -25,7 +25,7 @@
    <div class="col-sm-4">
      <div class="card">
        <div class="card-body">
-         <h5 class="card-title">Catgory : Transport</h5>
+         <h5 class="card-title">Category : Transport</h5>
          <p class="card-text">Amount this month : {{trpamount}} INR</p>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
@@ -36,8 +36,8 @@
    <div class="col-sm-4">
      <div class="card">
        <div class="card-body">
-         <h5 class="card-title">Catgory : Household</h5>
-         <p class="card-text">Amount this month : {{trpamount}} INR</p>
+         <h5 class="card-title">Category : Household</h5>
+         <p class="card-text">Amount this month : {{hslamount}} INR</p>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
@@ -47,8 +47,8 @@
    <div class="col-sm-4">
      <div class="card">
        <div class="card-body">
-         <h5 class="card-title">Catgory : Entertainment</h5>
-         <p class="card-text">Amount this month : {{trpamount}} INR</p>
+         <h5 class="card-title">Category : Entertainment</h5>
+         <p class="card-text">Amount this month : {{entamount}} INR</p>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
@@ -58,8 +58,8 @@
    <div class="col-sm-4">
      <div class="card">
        <div class="card-body">
-         <h5 class="card-title">Catgory : Utilities</h5>
-         <p class="card-text">Amount this month : {{trpamount}} INR</p>
+         <h5 class="card-title">Category : Utilities</h5>
+         <p class="card-text">Amount this month : {{utlamount}} INR</p>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
@@ -69,8 +69,8 @@
    <div class="col-sm-4">
      <div class="card">
        <div class="card-body">
-         <h5 class="card-title">Catgory : Others</h5>
-         <p class="card-text">Amount this month : {{trpamount}} INR</p>
+         <h5 class="card-title">Category : Others</h5>
+         <p class="card-text">Amount this month : {{othamount}} INR</p>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
