--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,10 +157,11 @@ input[type=text], input[type=email], input[type=password] {
   right:30px;
 }
 .container-addExpense{
+  display: none;
   width: 302px;
   position: absolute;
   top: 269px;
-  height:315px;
+  height:435px;
   left: 525px;
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -217,6 +218,64 @@ input[type=text], input[type=email], input[type=password] {
   margin-bottom: 5%;
 } */
 
-.add-expense-button{
-  
+/* #add-expense-button{
+  position: absolute;
+  top: 86px;
+  right: 80px;
+  text-decoration: none;
+  padding: 11px 13px;
+  background-color: #5BC0FF;
+  color:
+}
+
+#add-expense-button:hover{
+  color: white;
+  text-decoration: none;
+  background-color: #0EA4FE;
+} */
+
+#close-add-expense{
+  position: absolute;
+  right:5px;
+  top:5px;
+}
+
+.hvr-underline-reveal {
+  position: absolute;
+  padding: 11px 13px;
+  background-color: #5BC0FF;
+  top: 50px;
+  right: -1200px;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+  text-decoration: none;
+}
+.hvr-underline-reveal:before {
+  content: "";
+  position: absolute;
+  text-decoration: none;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #2098D1;
+  height: 4px;
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-underline-reveal:hover:before, .hvr-underline-reveal:focus:before, .hvr-underline-reveal:active:before {
+  -webkit-transform: translateY(0);
+  text-decoration: none;
+  transform: translateY(0);
 }
