monthly graph update. modification required

--- a/views/groupExp.hbs
+++ b/views/groupExp.hbs
@@ -17,7 +17,7 @@
          <h5 class="card-title">Category : Marketing</h5>
          <p class="card-text">Amount this month : {{mktamount}} INR</p>
          <a href="/user/graph/month" class="btn" style="background-color:#FB7C28;" id="vmm" name="marketing">View Month</a>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
+         <a href="/user/graph/year" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
      </div>
@@ -27,7 +27,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Transport</h5>
          <p class="card-text">Amount this month : {{trpamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month" class="btn" style="background-color:#FB7C28;" name="transport">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
