Not getting data from mongo

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,10 +21,10 @@
               <a class="nav-link text-white" href="#">Expenses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">View Graph</a>
+              <a class="nav-link text-white" href="#">View Graph</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Set Budget</a>
+              <a class="nav-link active" href="#">Set Budget</a>
             </li>
          </ul>
       </nav>
