--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -19,14 +19,7 @@
 <div id="add-expense-container" class="container-addExpense">
    <a id="close-add-expense" onclick="closeForm()" href="#"><p>&#10006;</p></a>
     <form class="form-signin" method="POST" action="/users/add-expense">
-               <div class="form-group">
-                 <div class="expense-form-text-date">
-                    <strong>Date</strong> 
-                 </div>
-                 <div class="expense-form-input-date">
-                    <input name="date" id="inputsForExpense" type="date" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Date" required >
-                 </div>           
-               </div>                
+                                            
                <div class="form-group">
                     <div class="expense-form-text-category">
                        <strong>Category</strong>
@@ -72,7 +65,11 @@
                     <div class="expense-form-input-expense">
                        <input name="expense" type="number" class="form-control" id="expense" aria-describedby="emailHelp" placeholder="Enter your expense" autofocus required >
                     </div>
-                 </div>                                        
+                 </div>     
+                 <div class="form-group">
+                  <label for="comment"><strong>Comment</strong></label>
+                  <textarea class="form-control" rows="5" id="comment"></textarea>
+                 </div>                                   
                  
                <div id="sbt-btn-expense" >
                     <input type="submit">
