--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<div class="header"></div>
+{{!-- <div class="header"></div> --}}
       <div class="vl"></div>
 
       <a id="signup-btn" href="/users/signup">SignUp</a>
