--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,4 +1,4 @@
- <div class="header"></div>
+ {{!-- <div class="header"></div> --}}
  {{#if msg}}
     <div id="alert-msg" class="alert alert-success text-center collapse">
        <a href="#" id="close-alert" class="close" data-dismiss="alert">&times;</a>
