--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,4 @@
-<div class="header"></div>
+{{!-- <div class="header"></div> --}}
 <div class="containerSignup">
     <div class="signup-form">
         <form class="form-signin" method="POST" action="/users/signup">
