--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 }
 
 /* Styling for WelcomePage i.e. 'home.hbs' */
-.header{
+header{
     height: 50px;
     position: absolute;
     background-color:#60C394;
@@ -13,29 +13,42 @@
     margin-right: 0;
     margin-top: 0;
     width: 100%; 
-
+}
+.logo{
+  position: absolute;
+  left: 10px;
+  font-size: 32px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: black;
+  text-decoration: none;
+  opacity: 1;
+  transition: .5s;
+}
+.logo:hover{
+  opacity: .5;
+  text-decoration: none;
 }
 #signup-btn{
     position: absolute;
     top: 400px;
     right: 113px;
     padding: 12px 51px;
-    background-color: #0EA4FE;
+    background-color: #35FF93;
     color: white;
     text-decoration: none;
     opacity: 0.6;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 #signin-btn{
     position: absolute;
     top: 430px;
     right: 113px;
     padding: 12px 55px;
-    background-color: #0EA4FE;
+    background-color: #35FF93;
     color: white;
     text-decoration: none;
     opacity: 0.6;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 #signup-btn:hover, #signin-btn:hover {
     opacity: 1;
@@ -70,7 +83,7 @@
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    box-shadow: 5px 10px #0EA4FE;
+    box-shadow: 5px 10px #35FF93;
 }
 input[type=text], input[type=email], input[type=password] {
     width: 100%;
@@ -78,23 +91,25 @@ input[type=text], input[type=email], input[type=password] {
     margin: 8px 0;
     box-sizing: border-box;
     border: none;
-    background-color: #0EA4FE;
+    background-color: #35FF93;
     color: white;
   }
   input[type=submit] {
     width: 100%;
-    background-color: #0EA4FE;
+    background-color: #35FF93;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
+    opacity: 1;
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
   input[type=submit]:hover{
-    background-color: #5BC0FF;
+    opacity: .7;
    }
   .header{
+    display: none;
     height: 50px;
     position: absolute;
     background-color:#0EA4FE;
@@ -110,12 +125,13 @@ input[type=text], input[type=email], input[type=password] {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    box-shadow: 5px 10px #0EA4FE;
+    box-shadow: 5px 10px #35FF93;
   }
   .signin-block a{
     padding: 5px;
+    color: #35FF93;
     text-decoration: none;
-    opacity: 0.85;
+    opacity: 0.35;
   }
   .signin-block a:hover{
     opacity: 1;
@@ -130,7 +146,7 @@ input[type=text], input[type=email], input[type=password] {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    box-shadow: 5px 10px #0EA4FE;
+    box-shadow: 5px 10px #35FF93;
 }
 .signup-block{
     position: absolute;
@@ -139,18 +155,24 @@ input[type=text], input[type=email], input[type=password] {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    box-shadow: 5px 10px #0EA4FE;
+    box-shadow: 5px 10px #35FF93;
   }
   .signup-block a{
     padding: 5px;
+    color: #35FF93;
     text-decoration: none;
-    opacity: 0.85;
+    opacity: 0.35;
   }
   .signup-block a:hover{
     opacity: 1;
   }
 /* Styling the profile page */
-
+#nav{
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  background-color: #35FF93;
+}
 #add-btn{
   position: absolute;
   top:30px;
@@ -166,119 +188,63 @@ input[type=text], input[type=email], input[type=password] {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
-  box-shadow: 5px 10px #0EA4FE;
+  box-shadow: 5px 10px #35FF93;
 }
-/* #inputsForExpense{
-  position: absolute;
-  right:10%;
-  top:20%;
-} */
-
-/* .expense-form-text-date{
-  position: absolute;
-  top:25px;
-  left: 10%;
-}
-.expense-form-input-date{
-  position: absolute;
-  top:25px;
-  right: 10%;
-}
-.expense-form-text-category{
-  position: absolute;
-  top:75px;
-  left: 10%;
-}
-.expense-form-input-category{
-  position: absolute;
-  top:75px;
-  right: 10%;
-}
-.expense-form-text-currency{
-  position: absolute;
-  top:125px;
-  left: 10%;
-}
-.expense-form-input-currency{
-  position: absolute;
-  top:125px;
-  right: 10%;
-}
-.expense-form-text-expense{
-  position: absolute;
-  top:175px;
-  left: 10%;
-}
-.expense-form-input-expense{
-  position: absolute;
-  top:175px;
-  right: 10%;
-}
-#sbt-btn-expense{
-  margin-bottom: 5%;
-} */
-
-/* #add-expense-button{
-  position: absolute;
-  top: 86px;
-  right: 80px;
-  text-decoration: none;
-  padding: 11px 13px;
-  background-color: #5BC0FF;
-  color:
-}
-
-#add-expense-button:hover{
-  color: white;
-  text-decoration: none;
-  background-color: #0EA4FE;
-} */
-
 #close-add-expense{
   position: absolute;
   right:5px;
   top:5px;
 }
-
-.hvr-underline-reveal {
+#hey{
   position: absolute;
-  padding: 11px 13px;
-  background-color: #5BC0FF;
-  top: 50px;
-  right: -1200px;
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
-  text-decoration: none;
-}
-.hvr-underline-reveal:before {
-  content: "";
-  position: absolute;
-  text-decoration: none;
-  z-index: -1;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #2098D1;
-  height: 4px;
-  -webkit-transform: translateY(4px);
-  transform: translateY(4px);
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.hvr-underline-reveal:hover:before, .hvr-underline-reveal:focus:before, .hvr-underline-reveal:active:before {
-  -webkit-transform: translateY(0);
-  text-decoration: none;
-  transform: translateY(0);
+  
 }
 #comment{
   height: 80px;
 }
+#here{
+  position: absolute;
+  width: 50%;
+  top: 115px;
+}
+#crdrex{
+  border: 1px solid black;
+  margin-left: 5px;
+  background-color: #9BC1AF;
+}
+#set-budget-container{
+  display: none;
+  width: 302px;
+  position: absolute;
+  top: 269px;
+  height:200px;
+  left: 525px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  box-shadow: 5px 10px #35FF93;
+}
+#close-set-budget{
+  position: absolute;
+  right:5px;
+  top:5px;
+}
+#logout-but{
+  position: absolute;
+  right: 10px;
+}
+#logout-button:hover{
+  background-color: cyan;
+}
+.close-card{
+  position: absolute;
+  right: 3px;
+  background-color: #35FF93
+  opacity: .35;
+  transition: .5s;
+}
+.close-card:hover{
+  opacity: 1;
+}
+
+ 
