--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.css">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
-</head>
-<body>
-    {{{body}}}
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js" charset="utf-8"></script>
+  </head>
+  {{!-- <body style="background-color:#E5EEE9;" >
+    <div class="text-center">
+      <img width="80px" src="../Images/Logo.png" alt="Logo"/>
+    </div> --}}
+    <header>
+      <a class="logo" href="/"><b>LOGO<b></a> 
+    </header>
+      
+      {{{body}}}
+
+  </body>
 </html>
