--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
       <img width="80px" src="../Images/Logo.png" alt="Logo"/>
     </div> --}}
     <header>
-      <a class="logo" href="/"><b>LOGO<b></a> 
+      <a class="logo" href="/users/profile"><b>LOGO<b></a> 
     </header>
       
       {{{body}}}
