pull from abhishek

--- a/views/groupExp.hbs
+++ b/views/groupExp.hbs
@@ -5,7 +5,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Grocery</h5>
          <p class="card-text">Amount this month : {{grcamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month/grocery" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
@@ -16,8 +16,8 @@
        <div class="card-body">
          <h5 class="card-title">Category : Marketing</h5>
          <p class="card-text">Amount this month : {{mktamount}} INR</p>
-         <a href="/user/graph/month" class="btn" style="background-color:#FB7C28;" id="vmm" name="marketing">View Month</a>
-         <a href="/user/graph/year" class="btn" style="background-color:#FB7C28;">View Year</a>
+         <a href="/user/graph/month/marketing" class="btn" style="background-color:#FB7C28;" id="vmm" name="marketing">View Month</a>
+         <a href="/user/graph/year/marketing" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
      </div>
@@ -27,7 +27,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Transport</h5>
          <p class="card-text">Amount this month : {{trpamount}} INR</p>
-         <a href="/user/graph/month" class="btn" style="background-color:#FB7C28;" name="transport">View Month</a>
+         <a href="/user/graph/month/transport" class="btn" style="background-color:#FB7C28;" name="transport">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
@@ -38,7 +38,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Household</h5>
          <p class="card-text">Amount this month : {{hslamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month/household" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
@@ -49,7 +49,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Entertainment</h5>
          <p class="card-text">Amount this month : {{entamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month/entertainment" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
@@ -60,7 +60,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Utilities</h5>
          <p class="card-text">Amount this month : {{utlamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month/utilities" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
@@ -71,7 +71,7 @@
        <div class="card-body">
          <h5 class="card-title">Category : Others</h5>
          <p class="card-text">Amount this month : {{othamount}} INR</p>
-         <a href="#" class="btn" style="background-color:#FB7C28;">View Month</a>
+         <a href="/user/graph/month/others" class="btn" style="background-color:#FB7C28;">View Month</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View Year</a>
          <a href="#" class="btn" style="background-color:#FB7C28;">View All time</a>
        </div>
