--- a/views/monthExp.hbs
+++ b/views/monthExp.hbs
@@ -1,5 +1,5 @@
-<div id="barChartContainer">
-    <canvas id="canvas" style="width:80%;"></canvas>
+<div id="barChartContainer" style="width:80%;">
+    <canvas id="canvas"></canvas>
 </div>
 <script>
 var ctx = document.getElementById('canvas').getContext('2d');
